# telegram-stocks-news-bot

./: .env.example  .gitignore  DOCUMENTATION.md  README.md  debug_news_filter.py  debug_scraper.py  find_news_structure.py  helpers.py  main.py  pyproject.toml  test_message.py
json/: paths.json  portfolio.json  ticker_suggestions.json
resources/: __init__.py  finviz_scraper.py  sentiment_classifier.py  stockanalysis_scraper.py  telegram_bot.py
scripts/: verify_timestamp_fix.py
tests/: __init__.py  test_finviz_scraper.py  test_helpers.py  test_sentiment_classifier.py  test_stockanalysis_scraper.py  test_telegram_bot.py
