[project]
name = "tmp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "lxml>=6.1.1",
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.8",
    "requests>=2.34.2",
    "torch>=2.13.0",
    "transformers>=5.14.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "ruff>=0.15.22",
]
